[gd_scene load_steps=4 format=3 uid="uid://me8t3x52lhkd"]

[ext_resource type="Script" path="res://temporary/multiplayer_test.gd" id="1_1wws8"]
[ext_resource type="PackedScene" uid="uid://cp27ab43p3mbe" path="res://temporary/test_player.tscn" id="2_be2bm"]
[ext_resource type="PackedScene" uid="uid://ccoi5byb8n26y" path="res://scenes/gui/player_icon.tscn" id="3_vew10"]

[node name="MultiplayerTest" type="Node2D"]
script = ExtResource("1_1wws8")
player_scene = ExtResource("2_be2bm")
player_ui = ExtResource("3_vew10")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://temporary/test_player.tscn")
spawn_path = NodePath("..")

[node name="MultiplayerSpawner2" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/gui/player_icon.tscn")
spawn_path = NodePath("../VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 44.0
offset_bottom = 66.0

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="FakePlayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Fake Player"

[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FakePlayerButton" to="." method="_on_fake_player_button_pressed"]
